--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,143 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400&display=swap');
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+*,
+*::before,
+*::after {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* Tags */
+.react {
+  border: 0.1rem solid rgb(97, 218, 251);
+}
+.react:hover {
+  background: rgba(97, 218, 251, 0.25);
 }
 
-body {
-  color: rbg(--foreground-rgb);
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.node {
+  border: 0.1rem solid rgb(131, 205, 41);
+}
+.node:hover {
+  background: rgba(131, 205, 41, 0.25);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.mongodb {
+  border: 0.1rem solid rgb(67, 153, 52);
+}
+.mongodb:hover {
+  background: rgba(67, 153, 52, 0.25);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.redux {
+  border: 0.1rem solid rgb(118, 74, 188);
+}
+.redux:hover {
+  background: rgba(118, 74, 188, 0.25);
+}
+
+.jest {
+  border: 0.1rem solid rgb(82, 143, 240);
+}
+.jest:hover {
+  background: rgba(82, 143, 240, 0.25);
+}
+
+.material-ui {
+  border: 0.1rem solid rgb(25, 118, 210);
+}
+.material-ui:hover {
+  background: rgba(25, 118, 210, 0.25);
+}
+
+.express {
+  border: 0.1rem solid rgb(0, 209, 178);
+}
+.express:hover {
+  background: rgb(0, 209, 178, 0.25);
+}
+
+.nextjs {
+  border: 0.1rem solid rgb(0, 112, 243);
+}
+.nextjs:hover {
+  background: rgba(0, 112, 243, 0.25);
+}
+
+.typescript {
+  border: 0.1rem solid rgb(6, 182, 212);
+}
+.typescript:hover {
+  background: rgba(6, 182, 212, 0.25);
+}
+
+.react-query {
+  border: 0.1rem solid rgb(255, 65, 84);
+}
+.react-query:hover {
+  background: rgba(255, 65, 84, 0.25);
+}
+
+.css-modules {
+  border: 0.1rem solid rgb(21, 114, 182);
+}
+.css-modules:hover {
+  background: rgba(21, 114, 182, 0.25);
+}
+
+.github-actions {
+  border: 0.1rem solid rgb(29, 233, 182);
+}
+.github-actions:hover {
+  background: rgba(29, 233, 182, 0.25);
+}
+
+.react-native {
+  border: 0.1rem solid rgb(255, 138, 101);
+}
+.react-native:hover {
+  background: rgba(255, 138, 101, 0.25);
+}
+
+.graphql {
+  border: 0.1rem solid rgb(128, 222, 234);
+}
+.graphql:hover {
+  background: rgba(128, 222, 234, 0.25);
+}
+
+.expo {
+  border: 0.1rem solid rgb(122, 68, 255);
+}
+.expo:hover {
+  background: rgba(122, 68, 255, 0.25);
+}
+
+.apollo {
+  border: 0.1rem solid rgb(128, 203, 196);
+}
+.apollo:hover {
+  background: rgba(128, 203, 196, 0.25);
+}
+
+.swift {
+  border: 0.1rem solid rgb(188, 170, 164);
+}
+.swift:hover {
+  background: rgba(188, 170, 164, 0.25);
+}
+
+.uikit {
+  border: 0.1rem solid rgb(205, 220, 57);
+}
+.uikit:hover {
+  background: rgba(205, 220, 57, 0.25);
+}
+
+.mapkit {
+  border: 0.1rem solid rgb(129, 212, 250);
+}
+.mapkit:hover {
+  background: rgba(129, 212, 250, 0.25);
 }
