--- a/styles/BottomBar.module.css
+++ b/styles/BottomBar.module.css
@@ -2,7 +2,7 @@
   background: var(--bottombar-bg);
   height: 25px;
   border-top: 1px solid var(--bottombar-border);
-  color: rgb(225, 228, 232);
+  color: var(--text-color);
   padding: 0 0.5rem;
   display: flex;
   align-items: center;
@@ -11,7 +11,7 @@
 }
 
 .bottomBar a {
-  color: white;
+  color: var(--text-color);
   text-decoration: none;
 }
 
