--- a/styles/Explorer.module.css
+++ b/styles/Explorer.module.css
@@ -1,7 +1,7 @@
 .explorer {
   background: var(--explorer-bg);
   width: 18vw;
-  color: rgb(225, 228, 232);
+  color: var(--text-color);
   font-family: 'Source Sans Pro', sans-serif;
   border-right: 1px solid var(--explorer-border);
 }
@@ -25,7 +25,7 @@
   cursor: pointer;
   padding: 0.25rem 0.5rem;
   background: var(--explorer-hover-bg);
-  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.25);
 }
 
 .checkbox {
