--- a/styles/Tab.module.css
+++ b/styles/Tab.module.css
@@ -1,7 +1,7 @@
 .tab {
   padding: 0.5rem 1.5rem 0.5rem 1rem;
   background: var(--tab-bg);
-  color: #ececec;
+  color: var(--text-color);
   display: flex;
   align-items: center;
   justify-content: center;
