--- a/styles/Titlebar.module.css
+++ b/styles/Titlebar.module.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: var(--text-color);
   font-family: 'Source Sans Pro', sans-serif;
   border-bottom: 1px solid #191d20;
   font-size: 0.9rem;
