add buttons to open resume

--- a/styles/AboutPage.module.css
+++ b/styles/AboutPage.module.css
@@ -25,7 +25,14 @@
 @media screen and (max-width: 800px) {
   .intro {
     width: 100%;
+    margin-bottom: 1rem;
   }
+}
+
+.imageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
@@ -39,6 +46,12 @@
   padding: 0rem 2rem;
 }
 
+@media screen and (max-width: 800px) {
+  .techContainer {
+    width: 100%;
+  }
+}
+
 .list {
   list-style: none;
 }
@@ -49,4 +62,16 @@
   margin: .5rem;
   border: 1px solid var(--accent-color);
   border-radius: 5px;
+}
+
+.button {
+  background: var(--accent-color);
+  font-size: 1.25rem;
+  padding: 0.3rem .75rem;
+  margin-top: .5rem;
+  color: #eee;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
