--- a/styles/Titlebar.module.css
+++ b/styles/Titlebar.module.css
@@ -25,13 +25,19 @@
 }
 
 .items > * {
-  padding: .5rem;
+  color: var(--text-color);
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 0.9rem;
+  padding: .2rem .5rem;
+  border: none;
+  background-color: inherit;
+  display: inline-block;
+  outline: none;
 }
 
 .items > *:hover {
-  padding: .5rem;
   background: #2d2f34;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .windowButtons {
